--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Complete Responsive Wedsite Design</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js"></script>
+    <script src="js/main.js" type="module"></script>
 </head>
 <body>
-    
+    <section class="banner" id="banner">
+        <div class="content">
+            <h2></h2>
+            <p></p>
+        </div>
+    </section>
 </body>
 </html>
