Maquetacion About Us JS, module

--- a/index.html
+++ b/index.html
@@ -9,14 +9,32 @@
     <script src="js/main.js" type="module"></script>
 </head>
 <body>
+    <!-- Menu -->
     <header>
         <ul></ul>
     </header>
+
+    <!-- Inicio -->
     <section class="banner" id="banner">
         <div class="content">
             <h2></h2>
             <p></p>
         </div>
     </section>
+
+    <!-- Sobre nosotros -->
+    <section class="about" id="about">
+        <div class="row">
+            <div class="col50">
+                <p></p>
+            </div>
+            <div class="col50">
+                <div class="imgBx">
+                    
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
